--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <li>Personalized by a Taste Engine that learns from your saves.</li>
         <li>Direct purchase links — no endless tabs.</li>
       </ul>
-      <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="signup">
-        <input type="email" name="email" placeholder="Enter your email" required>
-        <button type="submit">Join the waitlist</button>
-      </form>
+      <iframe
+  src="https://form.typeform.com/to/G9qEjRor"
+  style="width: 100%; height: 500px; border: none; border-radius: 12px;"
+></iframe>
       <p class="note">We’ll only email you about launch updates. No spam.</p>
     </div>
   </main>
