--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>Adel</h1>
       <p class="tagline">
-        Your AI furniture concierge. Curated picks from brands you love, personalized to your taste.
+        Your furniture concierge. Curated picks from brands you love, personalized to your taste.
       </p>
       <ul class="bullets">
         <li>Top 3 picks in seconds, plus 10 more you’ll actually like.</li>
