--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>Adel</h1>
       <p class="tagline">
-        Your furniture concierge. 
+        Your personal furniture concierge. 
         Curated picks from brands you love, personalized to your taste.
       </p>
       <ul class="bullets">
