--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </main>
   <footer style="margin-top: 60px; padding-top: 20px; border-top: 1px solid #ccc; text-align: center; font-size: 14px; color: #666;">
   <p>
-    <a href="/about.html" style="margin: 0 10px; text-decoration: none; color: #333;">About</a> |
-    <a href="/privacy.html" style="margin: 0 10px; text-decoration: none; color: #333;">Privacy</a>
+   <a href="/about.html">About</a> |
+<a href="/privacy.html">Privacy</a>
   </p>
   <p>© 2025 Adel. All rights reserved.</p>
 </footer>
