--- a/index.html
+++ b/index.html
@@ -15,6 +15,49 @@
   </style>
 </head>
 <body>
+
+<header>
+  <nav>
+    <h1>Furniture App</h1>
+    <ul>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/auth.html">Sign In</a></li>
+    </ul>
+  </nav>
+</header>
+
+<style>
+  header { 
+    background: #f5f5f5; 
+    padding: 12px 20px; 
+    margin-bottom: 24px; 
+    border-bottom: 1px solid #ddd;
+  }
+  nav { 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+  }
+  nav h1 { 
+    margin: 0; 
+    font-size: 1.2rem; 
+  }
+  nav ul { 
+    list-style: none; 
+    display: flex; 
+    gap: 16px; 
+    margin: 0; 
+    padding: 0;
+  }
+  nav ul li a { 
+    text-decoration: none; 
+    color: #333; 
+  }
+  nav ul li a:hover { 
+    text-decoration: underline; 
+  }
+</style>
+  
   <h1>Furniture Picks</h1>
 
   <section>
