--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
     .card { border: 1px solid #eee; border-radius: 12px; padding: 12px; background: #fafafa; }
     .card img { width: 100%; height: 220px; object-fit: cover; border-radius: 8px; }
     @media (max-width: 800px) { .grid { grid-template-columns: 1fr; } }
+
+    header { 
+      background: #f5f5f5; 
+      padding: 12px 20px; 
+      margin-bottom: 24px; 
+      border-bottom: 1px solid #ddd;
+    }
+    nav { 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center;
+    }
+    nav h1 { 
+      margin: 0; 
+      font-size: 1.2rem; 
+    }
+    nav ul { 
+      list-style: none; 
+      display: flex; 
+      gap: 16px; 
+      margin: 0; 
+      padding: 0;
+    }
+    nav ul li a { 
+      text-decoration: none; 
+      color: #333; 
+    }
+    nav ul li a:hover { 
+      text-decoration: underline; 
+    }
   </style>
 </head>
 <body>
@@ -26,178 +56,131 @@
   </nav>
 </header>
 
-<style>
-  header { 
-    background: #f5f5f5; 
-    padding: 12px 20px; 
-    margin-bottom: 24px; 
-    border-bottom: 1px solid #ddd;
-  }
-  nav { 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center;
-  }
-  nav h1 { 
-    margin: 0; 
-    font-size: 1.2rem; 
-  }
-  nav ul { 
-    list-style: none; 
-    display: flex; 
-    gap: 16px; 
-    margin: 0; 
-    padding: 0;
-  }
-  nav ul li a { 
-    text-decoration: none; 
-    color: #333; 
-  }
-  nav ul li a:hover { 
-    text-decoration: underline; 
-  }
-</style>
+<h1>Furniture Picks</h1>
+
+<section>
+  <h2>Top 3 Picks</h2>
+  <div id="top-3" class="grid"></div>
+</section>
+
+<section>
+  <h2>More You Might Like</h2>
+  <div id="more-10" class="grid"></div>
+</section>
+
+<section>
+  <h2>Search Products</h2>
+  <input id="search" placeholder="Search (e.g., sofa, marble, walnut)" />
+  <div id="results" class="grid" style="margin-top: 12px;"></div>
+</section>
 
 <!-- Config + Supabase -->
 <script src="/config.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <script>
   const client = supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
 
+  // --- HEADER LOGIN STATE ---
   async function updateAuthLink() {
     const { data: { user } } = await client.auth.getUser();
     const link = document.getElementById('auth-link');
 
     if (user) {
-      // If logged in → show "Sign Out"
-      link.textContent = "Sign Out";
+      const firstName = user.user_metadata?.firstName || '';
+      link.textContent = firstName ? `Welcome, ${firstName}! (Sign Out)` : "Sign Out";
       link.href = "#";
       link.onclick = async (e) => {
         e.preventDefault();
         await client.auth.signOut();
-        alert("Signed out");
-        updateAuthLink(); // refresh the header
+        updateAuthLink();
       };
     } else {
-      // If logged out → show "Sign In"
       link.textContent = "Sign In";
       link.href = "/auth.html";
       link.onclick = null;
     }
   }
-
-  // Run on page load
   updateAuthLink();
+
+  // --- LOAD PRODUCTS ---
+  async function loadProducts() {
+    const { data: featured, error: fErr } = await client
+      .from('products')
+      .select('*')
+      .eq('featured', true)
+      .order('created_at', { ascending: false })
+      .limit(3);
+    if (fErr) console.error(fErr);
+
+    const { data: more, error: mErr } = await client
+      .from('products')
+      .select('*')
+      .eq('featured', false)
+      .order('created_at', { ascending: false })
+      .limit(10);
+    if (mErr) console.error(mErr);
+
+    render('#top-3', featured || []);
+    render('#more-10', more || []);
+  }
+
+  function render(sel, items) {
+    const el = document.querySelector(sel);
+    if (!el) return;
+    el.innerHTML = items.map(p => `
+      <article class="card">
+        <img src="${p.image_url || ''}" alt="${p.title || ''}" />
+        <h3>${p.title || ''}</h3>
+        <p>${(p.brand || '')}${p.brand && p.category ? ' • ' : ''}${p.category || ''}</p>
+        <p>${p.price ? ('$' + Number(p.price).toFixed(2) + ' ' + (p.currency || 'USD')) : ''}</p>
+        <a href="${p.product_url || '#'}" target="_blank" rel="noopener">View</a>
+      </article>
+    `).join('');
+  }
+
+  // --- SEARCH FEATURE ---
+  const searchBox = document.querySelector('#search');
+  searchBox?.addEventListener('input', debounce(runSearch, 300));
+
+  async function runSearch() {
+    const q = searchBox.value.trim();
+    if (!q) {
+      document.querySelector('#results').innerHTML = '';
+      return;
+    }
+
+    const { data, error } = await client
+      .from('products')
+      .select('*')
+      .or(`title.ilike.%${q}%,brand.ilike.%${q}%,category.ilike.%${q}%`)
+      .limit(20);
+
+    if (error) {
+      console.error(error);
+      return;
+    }
+
+    document.querySelector('#results').innerHTML = (data || []).map(p => `
+      <article class="card">
+        <img src="${p.image_url || ''}" alt="${p.title || ''}" />
+        <h3>${p.title || ''}</h3>
+        <p>${(p.brand || '')}${p.brand && p.category ? ' • ' : ''}${p.category || ''}</p>
+        <p>${p.price ? ('$' + Number(p.price).toFixed(2) + ' ' + (p.currency || 'USD')) : ''}</p>
+        <a href="${p.product_url || '#'}" target="_blank" rel="noopener">View</a>
+      </article>
+    `).join('');
+  }
+
+  function debounce(fn, wait) {
+    let t;
+    return (...args) => {
+      clearTimeout(t);
+      t = setTimeout(() => fn(...args), wait);
+    };
+  }
+
+  loadProducts();
 </script>
-  
-  <h1>Furniture Picks</h1>
-
-  <section>
-    <h2>Top 3 Picks</h2>
-    <div id="top-3" class="grid"></div>
-  </section>
-
-  <section>
-    <h2>More You Might Like</h2>
-    <div id="more-10" class="grid"></div>
-  </section>
-
-  <section>
-    <h2>Search Products</h2>
-    <input id="search" placeholder="Search (e.g., sofa, marble, walnut)" />
-    <div id="results" class="grid" style="margin-top: 12px;"></div>
-  </section>
-
-  <!-- Config (your Supabase URL + anon key) -->
-  <script src="/config.js"></script>
-
-  <!-- Supabase client -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-  <!-- App logic -->
-  <script>
-    const client = supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
-
-    async function loadProducts() {
-      // Top 3 featured
-      const { data: featured, error: fErr } = await client
-        .from('products')
-        .select('*')
-        .eq('featured', true)
-        .order('created_at', { ascending: false })
-        .limit(3);
-      if (fErr) console.error(fErr);
-
-      // Next 10 non-featured
-      const { data: more, error: mErr } = await client
-        .from('products')
-        .select('*')
-        .eq('featured', false)
-        .order('created_at', { ascending: false })
-        .limit(10);
-      if (mErr) console.error(mErr);
-
-      // Render both sections
-      render('#top-3', featured || []);
-      render('#more-10', more || []);
-    }
-
-    function render(sel, items) {
-      const el = document.querySelector(sel);
-      if (!el) return;
-      el.innerHTML = items.map(p => `
-        <article class="card">
-          <img src="${p.image_url || ''}" alt="${p.title || ''}" />
-          <h3>${p.title || ''}</h3>
-          <p>${(p.brand || '')}${p.brand && p.category ? ' • ' : ''}${p.category || ''}</p>
-          <p>${p.price ? ('$' + Number(p.price).toFixed(2) + ' ' + (p.currency || 'USD')) : ''}</p>
-          <a href="${p.product_url || '#'}" target="_blank" rel="noopener">View</a>
-        </article>
-      `).join('');
-    }
-
-    // --- SEARCH FEATURE ---
-    const searchBox = document.querySelector('#search');
-    searchBox?.addEventListener('input', debounce(runSearch, 300));
-
-    async function runSearch() {
-      const q = searchBox.value.trim();
-      if (!q) {
-        document.querySelector('#results').innerHTML = '';
-        return;
-      }
-
-      const { data, error } = await client
-        .from('products')
-        .select('*')
-        .or(`title.ilike.%${q}%,brand.ilike.%${q}%,category.ilike.%${q}%`)
-        .limit(20);
-
-      if (error) {
-        console.error(error);
-        return;
-      }
-
-      document.querySelector('#results').innerHTML = (data || []).map(p => `
-        <article class="card">
-          <img src="${p.image_url || ''}" alt="${p.title || ''}" />
-          <h3>${p.title || ''}</h3>
-          <p>${(p.brand || '')}${p.brand && p.category ? ' • ' : ''}${p.category || ''}</p>
-          <p>${p.price ? ('$' + Number(p.price).toFixed(2) + ' ' + (p.currency || 'USD')) : ''}</p>
-          <a href="${p.product_url || '#'}" target="_blank" rel="noopener">View</a>
-        </article>
-      `).join('');
-    }
-
-    function debounce(fn, wait) {
-      let t;
-      return (...args) => {
-        clearTimeout(t);
-        t = setTimeout(() => fn(...args), wait);
-      };
-    }
-
-    loadProducts();
-  </script>
 </body>
 </html>
