--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <h3>${p.title || ''}</h3>
         <p>${(p.brand || '')}${p.brand && p.category ? ' • ' : ''}${p.category || ''}</p>
         <p>${p.price ? ('$' + Number(p.price).toFixed(2) + ' ' + (p.currency || 'USD')) : ''}</p>
-        <a href="${p.product_url || '#'}" target="_blank" rel="noopener">View</a>
+        <a href="/product.html?id=${p.id}">View Details</a>
       </article>
     `).join('');
   }
