--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
   }
   updateAuthLink();
 
+  async function requireQuiz() {
+  const { data: { user } } = await client.auth.getUser();
+  if (!user) {
+    window.location.href = "/auth.html";
+    return;
+  }
+
+  const { data: responses, error } = await client
+    .from('quiz_responses')
+    .select('*')
+    .eq('user_id', user.id)
+    .limit(1);
+
+  if (error || responses.length === 0) {
+    window.location.href = "/quiz.html";
+    return;
+  }
+}
+requireQuiz();
+
   // --- LOAD PRODUCTS ---
   async function loadProducts() {
     const { data: featured, error: fErr } = await client
