--- a/quiz.html
+++ b/quiz.html
@@ -66,13 +66,16 @@
         .insert([{ user_id: user.id, answers }]);
 
       if (error) {
-        document.getElementById('status').textContent = "Error: " + error.message;
-      } else {
         document.getElementById('quiz').style.display = "none";
         document.getElementById('status').innerHTML = `
-          <p>Thanks! Your answers are saved.</p>
-          <p><a href="/index.html">Back to Homepage</a></p>
-        `;
+          <p>Great! Your answers are saved.</p>
+          <button onclick="goToMatches()">Show Me My Matches</button>
+       `;
+
+function goToMatches() {
+  window.location.href = "/index.html";
+}
+
       }
     }
   </script>
