--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,13 @@
     .question { margin-bottom: 20px; }
     button { padding: 10px 16px; cursor: pointer; }
   </style>
+  <script src="https://unpkg.com/@supabase/supabase-js"></script>
+<script>
+  const supabase = window.supabase.createClient(
+    "https://nqcmlwtwsfivcyarurwr.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5xY21sd3R3c2ZpdmN5YXJ1cndyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY0ODM0MDIsImV4cCI6MjA3MjA1OTQwMn0.UGie7ib7PYIZHQcGpwQKk5O2xGMvn5_NCDGKEht1biQ"
+  );
+</script>
 </head>
 <body>
   <h1>Discover Your Style</h1>
@@ -42,6 +49,31 @@
   </div>
 
   <div id="status"></div>
+
+        <form id="quiz-form">
+  <label>Style:</label><br>
+  <select name="style" required>
+    <option value="Mid-Century">Mid-Century</option>
+    <option value="Modern">Modern</option>
+    <option value="Boho">Boho</option>
+  </select><br><br>
+
+  <label>Budget:</label><br>
+  <select name="budget" required>
+    <option value="<$500">Under $500</option>
+    <option value="$500-$1500">$500–$1500</option>
+    <option value="$1500+">$1500+</option>
+  </select><br><br>
+
+  <label>Room:</label><br>
+  <select name="room" required>
+    <option value="Living Room">Living Room</option>
+    <option value="Bedroom">Bedroom</option>
+    <option value="Dining Room">Dining Room</option>
+  </select><br><br>
+
+  <button type="submit">See My Matches</button>
+</form>
 
   <script src="/config.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -79,5 +111,41 @@ function goToMatches() {
       }
     }
   </script>
+
+        <script>
+  const form = document.getElementById("quiz-form");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    // Grab answers from the form
+    const answers = {
+      style: form.style.value,
+      budget: form.budget.value,
+      room: form.room.value
+    };
+
+    // Get the logged-in user
+    const { data: { user }, error: userError } = await supabase.auth.getUser();
+    if (userError || !user) {
+      alert("You need to log in first.");
+      return;
+    }
+
+    // Save quiz response to Supabase
+    const { error } = await supabase
+      .from("quiz_responses")
+      .insert([{ user_id: user.id, answers }]);
+
+    if (error) {
+      console.error("Error saving quiz:", error);
+      alert("Something went wrong saving your quiz.");
+      return;
+    }
+
+    // Redirect to products page
+    window.location.href = "products.html";
+  });
+</script>
 </body>
 </html>
