--- a/products.html
+++ b/products.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Matches</title>
+  <style>
+    body { font-family: sans-serif; margin: 20px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
+    .card { border: 1px solid #ddd; border-radius: 12px; padding: 16px; }
+    .card img { max-width: 100%; border-radius: 8px; margin-bottom: 8px; }
+    h2 { margin-top: 40px; }
+  </style>
+</head>
+<body>
+  <h1>Your Matches</h1>
+
+  <h2>Top Picks</h2>
+  <div id="top-3" class="grid"></div>
+
+  <h2>More You Might Like</h2>
+  <div id="more-10" class="grid"></div>
+
+  <!-- Config + Supabase -->
+  <script src="/config.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const client = supabase.createClient(window.SUPABASE_URL, window.SUPABASE_ANON_KEY);
+
+    async function getUserAnswers() {
+      const { data: { user } } = await client.auth.getUser();
+      if (!user) return {};
+
+      const { data, error } = await client
+        .from("quiz_responses")
+        .select("answers")
+        .eq("user_id", user.id)
+        .order("created_at", { ascending: false })
+        .limit(1);
+
+      return data?.[0]?.answers || {};
+    }
+
+    async function loadPersonalizedProducts() {
+      const answers = await getUserAnswers();
+
+      let query = client.from("products").select("*");
+
+      if (answers.style) {
+        query = query.contains("tags", [answers.style.toLowerCase()]);
+      }
+      if (answers.budget === "<$500") {
+        query = query.lt("price", 500);
+      }
+      if (answers.budget === "$500-$1500") {
+        query = query.gte("price", 500).lte("price", 1500);
+      }
+      if (answers.room) {
+        query = query.eq("category", answers.room);
+      }
+
+      const { data, error } = await query.limit(20);
+      if (error) {
+        console.error(error);
+        return;
+      }
+
+      renderProducts(data);
+    }
+
+    function renderProducts(products) {
+      const top3 = document.getElementById("top-3");
+      const more10 = document.getElementById("more-10");
+
+      top3.innerHTML = "";
+      more10.innerHTML = "";
+
+      products.slice(0,3).forEach(p => {
+        top3.innerHTML += `
+          <div class="card">
+            <img src="${p.image_url}" alt="${p.title}" />
+            <h3>${p.title}</h3>
+            <p>$${p.price}</p>
+            <a href="product.html?id=${p.id}">View Details</a>
+          </div>`;
+      });
+
+      products.slice(3,13).forEach(p => {
+        more10.innerHTML += `
+          <div class="card">
+            <img src="${p.image_url}" alt="${p.title}" />
+            <h3>${p.title}</h3>
+            <p>$${p.price}</p>
+            <a href="product.html?id=${p.id}">View Details</a>
+          </div>`;
+      });
+    }
+
+    loadPersonalizedProducts();
+  </script>
+</body>
+</html>
 
