--- a/products.html
+++ b/products.html
@@ -65,6 +65,9 @@
         return;
       }
 
+      console.log("Quiz answers:", answers);
+      console.log("Products returned:", data);
+
       renderProducts(data);
     }
 
