--- a/products.html
+++ b/products.html
@@ -47,17 +47,17 @@
       let query = client.from("products").select("*");
 
       if (answers.style) {
-        query = query.contains("tags", [answers.style]);
-      }
-      if (answers.budget === "<$500") {
-        query = query.lt("price", 500);
-      }
-      if (answers.budget === "$500-$1500") {
-        query = query.gte("price", 500).lte("price", 1500);
-      }
-      if (answers.room) {
-        query = query.eq("category", answers.room);
-      }
+  query = query.contains("tags", [answers.style]); // no .toLowerCase()
+}
+if (answers.budget === "<$500") {
+  query = query.lt("price", 500);
+}
+if (answers.budget === "$500-$1500") {
+  query = query.gte("price", 500).lte("price", 1500);
+}
+if (answers.room) {
+  query = query.eq("category", answers.room);
+}
 
       const { data, error } = await query.limit(20);
       if (error) {
@@ -67,6 +67,7 @@
 
       console.log("Quiz answers:", answers);
       console.log("Products returned:", data);
+      console.log("Query error:", error);
 
       renderProducts(data);
     }
