--- a/products.html
+++ b/products.html
@@ -46,18 +46,18 @@
 
       let query = client.from("products").select("*");
 
-      if (answers.style) {
-  query = query.contains("tags", [answers.style]); // no .toLowerCase()
-}
-if (answers.budget === "<$500") {
-  query = query.lt("price", 500);
-}
-if (answers.budget === "$500-$1500") {
-  query = query.gte("price", 500).lte("price", 1500);
-}
-if (answers.room) {
-  query = query.eq("category", answers.room);
-}
+//      if (answers.style) {
+//  query = query.contains("tags", [answers.style]); // no .toLowerCase()
+//}
+//if (answers.budget === "<$500") {
+//  query = query.lt("price", 500);
+//}
+//if (answers.budget === "$500-$1500") {
+//  query = query.gte("price", 500).lte("price", 1500);
+//}
+//if (answers.room) {
+//  query = query.eq("category", answers.room);
+//}
 
       const { data, error } = await query.limit(20);
       if (error) {
